--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/glightbox.min.css" />
+	<link rel="stylesheet" href="css/glightbox.css" />
 	<link rel="stylesheet" href="css/styles.css" />
 	<title>Charlie Zhang</title>
 </head>
@@ -12,30 +12,33 @@
 		<nav class="header-nav">
 			<h1 class="logo">Charlie Zhang</h1>
 			<ul class="nav menu">
-				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/">Instagram</a></li>
+				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/" target="_blank">Instagram</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main class="gallery-page">
 		<section class="gallery-span">
 			<div class="gallery-item w-2 h-2">
-				<a href="img/1.jpg" class ="glightbox"
+				<a href="img/1.jpg" 
+				class="glightbox"
 					><img 
 					src="img/1.jpg" 
-					alt="" 
+					alt="image" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/2.jpg" class ="glightbox"
+				<a href="img/2.jpg" 
+				class="glightbox"
 					><img 
 					src="img/2.jpg" 
-					alt="" 
+					alt="image" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/3.jpg" class ="glightbox"
+				<a href="img/3.jpg" 
+				class="glightbox"
 					><img 
 					src="img/3.jpg" 
 					alt="" 
@@ -43,7 +46,8 @@
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/4.jpg" class ="glightbox"
+				<a href="img/4.jpg" 
+				class="glightbox"
 					><img 
 					src="img/4.jpg" 
 					alt="" 
@@ -51,7 +55,8 @@
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/5.jpg" class ="glightbox"
+				<a href="img/5.jpg" 
+				class="glightbox"
 					><img 
 					src="img/5.jpg" 
 					alt="" 
@@ -59,7 +64,8 @@
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/6.jpg" class ="glightbox"
+				<a href="img/6.jpg" 
+				class="glightbox"
 					><img 
 					src="img/6.jpg" 
 					alt="" 
@@ -67,7 +73,8 @@
 				/></a>
 			</div>
 			<div class="gallery-item w-2 h-2">
-				<a href="img/7.jpg" class ="glightbox"
+				<a href="img/7.jpg" 
+				class="glightbox"
 					><img 
 					src="img/7.jpg" 
 					alt="" 
@@ -75,7 +82,8 @@
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/8.jpg" class ="glightbox"
+				<a href="img/8.jpg" 
+				class="glightbox"
 					><img 
 					src="img/8.jpg" 
 					alt="" 
@@ -86,7 +94,9 @@
 	</main>
 	<script src="js/glightbox.min.js"></script>
 	<script type="text/javascript">
-		const lightbox = GLightbox({ loop: true; });
+		const lightbox = GLightbox({ 
+			loop: true; 
+		});
 	</script>
 </body>
 </html>
