--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/glightbox.css" />
 	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="css/lightbox.min.css" />
 	<title>Charlie Zhang</title>
 </head>
 <body>
@@ -19,18 +19,15 @@
 	<main class="gallery-page">
 		<section class="gallery-span">
 			<div class="gallery-item w-2 h-2">
-				<a href="img/1.jpg" 
-				class="glightbox"
+				<a href="img/1.jpg" data-lightbox="image-1"
 					><img 
 					src="img/1.jpg" 
 					alt="image" 
 					class="gallery-img"
 				/></a>
 			</div>
-			<!--
 			<div class="gallery-item">
-				<a href="img/2.jpg" 
-				class="glightbox"
+				<a href="img/2.jpg" data-lightbox="image-2"
 					><img 
 					src="img/2.jpg" 
 					alt="image" 
@@ -38,8 +35,7 @@
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/3.jpg" 
-				class="glightbox"
+				<a href="img/3.jpg" data-lightbox="image-3"
 					><img 
 					src="img/3.jpg" 
 					alt="" 
@@ -47,8 +43,7 @@
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/4.jpg" 
-				class="glightbox"
+				<a href="img/4.jpg" data-lightbox="image-4"
 					><img 
 					src="img/4.jpg" 
 					alt="" 
@@ -56,8 +51,7 @@
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/5.jpg" 
-				class="glightbox"
+				<a href="img/5.jpg" data-lightbox="image-5"
 					><img 
 					src="img/5.jpg" 
 					alt="" 
@@ -65,8 +59,7 @@
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/6.jpg" 
-				class="glightbox"
+				<a href="img/6.jpg" data-lightbox="image-6"
 					><img 
 					src="img/6.jpg" 
 					alt="" 
@@ -74,8 +67,7 @@
 				/></a>
 			</div>
 			<div class="gallery-item w-2 h-2">
-				<a href="img/7.jpg" 
-				class="glightbox"
+				<a href="img/7.jpg" data-lightbox="image-7"
 					><img 
 					src="img/7.jpg" 
 					alt="" 
@@ -83,22 +75,16 @@
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/8.jpg" 
-				class="glightbox"
+				<a href="img/8.jpg" data-lightbox="image-8"
 					><img 
 					src="img/8.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
-			-->
 		</section>
 	</main>
-	<script src="js/glightbox.min.js"></script>
-	<script type="text/javascript">
-		const lightbox = GLightbox({ 
-			loop: true; 
-		});
-	</script>
+	<script src="js/jquery-3.7.0.min.js"></script>
+	<script src="js/lightbox.min.js"></script>
 </body>
 </html>
