--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					class="gallery-img"
 				/></a>
 			</div>
-			<div class="gallery-item">
+			<div class="gallery-item h-2">
 				<a href="img/3.jpg" data-lightbox="image-3"
 					><img 
 					src="img/3.jpg" 
@@ -58,7 +58,7 @@
 					class="gallery-img"
 				/></a>
 			</div>
-			<div class="gallery-item h-2">
+			<div class="gallery-item">
 				<a href="img/6.jpg" data-lightbox="image-6"
 					><img 
 					src="img/6.jpg" 
@@ -66,7 +66,7 @@
 					class="gallery-img"
 				/></a>
 			</div>
-			<div class="gallery-item w-2 h-2">
+			<div class="gallery-item w-2">
 				<a href="img/7.jpg" data-lightbox="image-76"
 					><img 
 					src="img/7.jpg" 
@@ -74,10 +74,34 @@
 					class="gallery-img"
 				/></a>
 			</div>
-			<div class="gallery-item">
+			<div class="gallery-item w-2 h-2">
 				<a href="img/8.jpg" data-lightbox="image-8"
 					><img 
 					src="img/8.jpg" 
+					alt="" 
+					class="gallery-img"
+				/></a>
+			</div>
+			<div class="gallery-item">
+				<a href="img/9.jpg" data-lightbox="image-9"
+					><img 
+					src="img/9.jpg" 
+					alt="" 
+					class="gallery-img"
+				/></a>
+			</div>
+			<div class="gallery-item">
+				<a href="img/10.jpg" data-lightbox="image-10"
+					><img 
+					src="img/10.jpg" 
+					alt="" 
+					class="gallery-img"
+				/></a>
+			</div>
+			<div class="gallery-item">
+				<a href="img/11.jpg" data-lightbox="image-11"
+					><img 
+					src="img/11.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
