--- a/index.html
+++ b/index.html
@@ -8,100 +8,100 @@
 	<title>Charlie Zhang</title>
 </head>
 <body>
-	<header>
+	<header class="prevent-select">
 		<nav class="header-nav">
 			<h1 class="logo">Charlie Zhang</h1>
 			<ul class="nav menu">
-				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/" target="_blank">Instagram</a></li>
+				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/" class="prevent-select" target="_blank">Instagram</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main class="gallery-page">
 		<section class="gallery-span">
 			<div class="gallery-item w-2 h-2">
-				<a href="img/1.jpg" data-lightbox="image-1"
+				<a href="img/img-1.jpg" data-lightbox="image-1"
 					><img 
-					src="img/1.jpg" 
+					src="img/img-1.jpg" 
 					alt="image" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/2.jpg" data-lightbox="image-2"
+				<a href="img/img-2.jpg" data-lightbox="image-2"
 					><img 
-					src="img/2.jpg" 
+					src="img/img-2.jpg" 
 					alt="image" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/3.jpg" data-lightbox="image-3"
+				<a href="img/img-3.jpg" data-lightbox="image-3"
 					><img 
-					src="img/3.jpg" 
+					src="img/img-3.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/4.jpg" data-lightbox="image-4"
+				<a href="img/img-4.jpg" data-lightbox="image-4"
 					><img 
-					src="img/4.jpg" 
+					src="img/img-4.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item h-2">
-				<a href="img/5.jpg" data-lightbox="image-5"
+				<a href="img/img-5.jpg" data-lightbox="image-5"
 					><img 
-					src="img/5.jpg" 
+					src="img/img-5.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/6.jpg" data-lightbox="image-6"
+				<a href="img/img-6.jpg" data-lightbox="image-6"
 					><img 
-					src="img/6.jpg" 
+					src="img/img-6.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item w-2">
-				<a href="img/7.jpg" data-lightbox="image-76"
+				<a href="img/img-7.jpg" data-lightbox="image-76"
 					><img 
-					src="img/7.jpg" 
+					src="img/img-7.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item w-2 h-2">
-				<a href="img/8.jpg" data-lightbox="image-8"
+				<a href="img/img-8.jpg" data-lightbox="image-8"
 					><img 
-					src="img/8.jpg" 
+					src="img/img-8.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/9.jpg" data-lightbox="image-9"
+				<a href="img/img-9.jpg" data-lightbox="image-9"
 					><img 
-					src="img/9.jpg" 
+					src="img/img-9.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/10.jpg" data-lightbox="image-10"
+				<a href="img/img-10.jpg" data-lightbox="image-10"
 					><img 
-					src="img/10.jpg" 
+					src="img/img-10.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
 			</div>
 			<div class="gallery-item">
-				<a href="img/11.jpg" data-lightbox="image-11"
+				<a href="img/img-11.jpg" data-lightbox="image-11"
 					><img 
-					src="img/11.jpg" 
+					src="img/img-11.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
