--- a/cc - Copy.html
+++ b/cc - Copy.html
@@ -19,31 +19,21 @@
 		</nav>
 	</header>
 	<main class="gallery-page">
-		<section class="gallery-span">
-			<div class="gallery-item">
-				<a href="img/compcard/img-1.jpg"  data-lightbox="image-1"
-					><img 
-					src="img/compcard/img-1.jpg" 
-					alt="image" 
-					class="gallery-img"
-				/></a>
-			</div>
-			<div class="gallery-item">
-				<a href="img/compcard/img-2.jpg"  data-lightbox="image-2"
-					><img 
-					src="img/compcard/img-2.jpg" 
-					alt="image" 
-					class="gallery-img"
-				/></a>
-		</section>
+<div class="scene scene--card">
+  <div class="card">
+    <div class="card__face card__face--front">front</div>
+    <div class="card__face card__face--back">back</div>
+  </div>
+</div>
 	</main>
-	<script src="js/jquery-3.7.0.min.js"></script>
-	<script src="js/lightbox.min.js"></script>
 	<script>
-		lightbox.option({
-		'resizeDuration': 100,
-		'imageFadeDuration': 0,
-		})
+	var cards = document.querySelectorAll('.card');
+
+		[...cards].forEach((card)=>{
+			card.addEventListener( 'click', function() {
+			card.classList.toggle('is-flipped');
+		});
+	});
 	</script>
 </body>
 </html>
