--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,9 @@
 	<title>Charlie Zhang</title>
 </head>
 <body>
-	<header class="prevent-select">
+	<header>
 		<nav class="header-nav">
-			<h1 class="logo">Charlie Zhang</h1>
+			<h1 class="logo"><h2 class="prevent-select">Charlie Zhang</h2></h1>
 			<ul class="nav menu">
 				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/" class="prevent-select" target="_blank">Instagram</a></li>
 			</ul>
