--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/lightbox.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Charlie Zhang</title>
 </head>
 <body>
-	<header class="prevent-select">
+	<header>
 		<nav class="header-nav">
 			<h1 class="logo">Charlie Zhang</h1>
 			<ul class="nav menu">
-				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng/" class="prevent-select" target="_blank">Instagram</a></li>
+				<li class="nav-item"><a href="https://www.instagram.com/chrlezhng" class="fa fa-instagram" class="prevent-select" target="_blank"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -108,6 +109,24 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<nav id="footer-nav">
+		<div id="inner">
+			<div class="me-info">
+				<p>Height 184</p>
+			</div>
+			<div class="me-info">
+				<p>Weight 67</p>
+			</div>
+			<div class="me-info">
+				<p>Chest 96</p>
+			</div>
+			<div class="me-info">
+				<p>Waist 31</p>
+			</div>
+			</div>
+		</nav>
+	</footer>
 	<script src="js/jquery-3.7.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script>
