--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
 		<nav id="footer-nav">
 		<div id="inner">
 			<div class="me-info">
-				<p>Height 184</p>
+				<p>Height xxx</p>
 			</div>
 			<div class="me-info">
-				<p>Weight 67</p>
+				<p>Weight xx</p>
 			</div>
 			<div class="me-info">
-				<p>Chest 96</p>
+				<p>Chest xx</p>
 			</div>
 			<div class="me-info">
-				<p>Waist 31</p>
+				<p>Waist xx</p>
 			</div>
 			</div>
 		</nav>
