--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<nav id="footer-nav">
 		<div id="inner">
 			<div class="me-info">
-				<p>Height xxx</p>
+				<p>Height xx</p>
 			</div>
 			<div class="me-info">
 				<p>Weight xx</p>
