--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					class="gallery-img"
 				/></a>
 			</div>
-			<div class="gallery-item">
+			<div class="gallery-item h-2">
 				<a href="img/index/img-9.jpg" data-lightbox="image-9"
 					><img 
 					src="img/index/img-9.jpg" 
@@ -95,14 +95,6 @@
 				<a href="img/index/img-10.jpg" data-lightbox="image-10"
 					><img 
 					src="img/index/img-10.jpg" 
-					alt="" 
-					class="gallery-img"
-				/></a>
-			</div>
-			<div class="gallery-item">
-				<a href="img/index/img-11.jpg" data-lightbox="image-11"
-					><img 
-					src="img/index/img-11.jpg" 
 					alt="" 
 					class="gallery-img"
 				/></a>
