--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
 		<nav id="footer-nav">
 		<div id="inner">
 			<div class="me-info">
-				<p>Height xx</p>
+				<p>Height 184</p>
 			</div>
 			<div class="me-info">
-				<p>Weight xx</p>
+				<p>Weight 70</p>
 			</div>
 			<div class="me-info">
-				<p>Chest xx</p>
+				<p>Chest 96</p>
 			</div>
 			<div class="me-info">
-				<p>Waist xx</p>
+				<p>Waist 82</p>
 			</div>
 			</div>
 		</nav>
